Compiler/gen/lexAnalysisParser.java
// Generated from /Users/ioanamoflic/compilerrepo/Compiler/src/lexAnalysis.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class lexAnalysisParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, TEXT_TYPE=2, TINY=3, SIGNED_TINY=4, HUGE=5, SIGNED_HUGE=6, DOUBLE=7, 
		SIGNED_DOUBLE=8, EXPONENTIAL=9, SIGNED_EXPONENTIAL=10, BREAK=11, WHILE=12, 
		IF=13, ELSE=14, FOR=15, SWITCH=16, CASE=17, DEFAULT=18, DO=19, MAIN=20, 
		INSTRUCTION=21, BOOLEAN=22, TRUE=23, FALSE=24, METHOD_NAME=25, DATATYPE=26, 
		VAR=27, WORD=28, NOT_NULL_DIGIT=29, DIGIT=30, SIGN=31, CHAR=32, PLUS=33, 
		MINUS=34, LOWERCASE=35, UPPERCASE=36, NEWLINE=37, WS=38, COMMENT=39, CONST=40, 
		LET=41, COMMA=42, SEMI_COLON=43, COLON=44, MULT=45, DIV=46, MOD=47, LEFT_PAR=48, 
		RIGHT_PAR=49, LEFT_BR=50, RIGHT_BR=51, ASSIGN=52, NOT=53, AND=54, REF=55, 
		OR=56, GREATER_THAN=57, GREATER_EQUAL=58, LOWER_THAN=59, LOWER_EQUAL=60, 
		EQUAL=61, DIFFERENT=62, INCR=63, DECR=64, ADD_TO=65, SUB_FROM=66, MULT_BY=67, 
		DIV_BY=68, POW=69;
	public static final int
		RULE_start = 0, RULE_expr = 1, RULE_assignment = 2, RULE_assignment_expr = 3, 
		RULE_define_var = 4, RULE_parameter_method = 5, RULE_parameter_call_function = 6, 
		RULE_method = 7, RULE_call_method = 8, RULE_pre_increment = 9, RULE_pre_decrement = 10, 
		RULE_post_increment = 11, RULE_post_decrement = 12, RULE_incr_decr = 13, 
		RULE_incr_decr_expr = 14, RULE_math_by = 15, RULE_operator_expression = 16, 
		RULE_comparator = 17, RULE_for_rule = 18, RULE_first_statement = 19, RULE_second_statement = 20, 
		RULE_third_statement = 21, RULE_while_rule = 22, RULE_if_rule = 23, RULE_number = 24, 
		RULE_instructions = 25, RULE_block_instructions = 26, RULE_while_do = 27, 
		RULE_do_while_rule = 28, RULE_switch_rule = 29, RULE_switch_case = 30, 
		RULE_default_case = 31, RULE_id = 32, RULE_id_assign = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expr", "assignment", "assignment_expr", "define_var", "parameter_method", 
			"parameter_call_function", "method", "call_method", "pre_increment", 
			"pre_decrement", "post_increment", "post_decrement", "incr_decr", "incr_decr_expr", 
			"math_by", "operator_expression", "comparator", "for_rule", "first_statement", 
			"second_statement", "third_statement", "while_rule", "if_rule", "number", 
			"instructions", "block_instructions", "while_do", "do_while_rule", "switch_rule", 
			"switch_case", "default_case", "id", "id_assign"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'0'", null, null, null, null, null, null, null, null, null, "'break;'", 
			"'while'", "'if'", "'else'", "'for'", "'switch'", "'case'", "'default'", 
			"'do'", "'main'", null, null, "'true'", "'false'", null, null, null, 
			null, null, null, null, null, "'+'", "'-'", null, null, null, null, null, 
			"'const'", "'let'", "','", "';'", "':'", "'*'", "'/'", "'%'", "'('", 
			"')'", "'{'", "'}'", "'='", "'!'", "'&&'", "'&'", "'||'", "'>'", "'>='", 
			"'<'", "'<='", "'=='", "'!='", "'++'", "'--'", "'+='", "'-='", "'*='", 
			"'/='", "'**'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "TEXT_TYPE", "TINY", "SIGNED_TINY", "HUGE", "SIGNED_HUGE", 
			"DOUBLE", "SIGNED_DOUBLE", "EXPONENTIAL", "SIGNED_EXPONENTIAL", "BREAK", 
			"WHILE", "IF", "ELSE", "FOR", "SWITCH", "CASE", "DEFAULT", "DO", "MAIN", 
			"INSTRUCTION", "BOOLEAN", "TRUE", "FALSE", "METHOD_NAME", "DATATYPE", 
			"VAR", "WORD", "NOT_NULL_DIGIT", "DIGIT", "SIGN", "CHAR", "PLUS", "MINUS", 
			"LOWERCASE", "UPPERCASE", "NEWLINE", "WS", "COMMENT", "CONST", "LET", 
			"COMMA", "SEMI_COLON", "COLON", "MULT", "DIV", "MOD", "LEFT_PAR", "RIGHT_PAR", 
			"LEFT_BR", "RIGHT_BR", "ASSIGN", "NOT", "AND", "REF", "OR", "GREATER_THAN", 
			"GREATER_EQUAL", "LOWER_THAN", "LOWER_EQUAL", "EQUAL", "DIFFERENT", "INCR", 
			"DECR", "ADD_TO", "SUB_FROM", "MULT_BY", "DIV_BY", "POW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lexAnalysis.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lexAnalysisParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(lexAnalysisParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(lexAnalysisParser.NEWLINE, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (T__0 - 1)) | (1L << (TEXT_TYPE - 1)) | (1L << (TINY - 1)) | (1L << (SIGNED_TINY - 1)) | (1L << (HUGE - 1)) | (1L << (SIGNED_HUGE - 1)) | (1L << (DOUBLE - 1)) | (1L << (SIGNED_DOUBLE - 1)) | (1L << (EXPONENTIAL - 1)) | (1L << (SIGNED_EXPONENTIAL - 1)) | (1L << (BREAK - 1)) | (1L << (WHILE - 1)) | (1L << (IF - 1)) | (1L << (FOR - 1)) | (1L << (SWITCH - 1)) | (1L << (DO - 1)) | (1L << (BOOLEAN - 1)) | (1L << (METHOD_NAME - 1)) | (1L << (DATATYPE - 1)) | (1L << (VAR - 1)) | (1L << (WORD - 1)) | (1L << (NOT_NULL_DIGIT - 1)) | (1L << (DIGIT - 1)) | (1L << (CHAR - 1)) | (1L << (NEWLINE - 1)) | (1L << (WS - 1)) | (1L << (COMMENT - 1)) | (1L << (LEFT_PAR - 1)) | (1L << (INCR - 1)) | (1L << (DECR - 1)))) != 0)) {
				{
				{
				setState(68);
				expr(0);
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(69);
					match(NEWLINE);
					}
					break;
				}
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode LEFT_PAR() { return getToken(lexAnalysisParser.LEFT_PAR, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RIGHT_PAR() { return getToken(lexAnalysisParser.RIGHT_PAR, 0); }
		public TerminalNode DIGIT() { return getToken(lexAnalysisParser.DIGIT, 0); }
		public TerminalNode NOT_NULL_DIGIT() { return getToken(lexAnalysisParser.NOT_NULL_DIGIT, 0); }
		public TerminalNode WS() { return getToken(lexAnalysisParser.WS, 0); }
		public TerminalNode NEWLINE() { return getToken(lexAnalysisParser.NEWLINE, 0); }
		public TerminalNode CHAR() { return getToken(lexAnalysisParser.CHAR, 0); }
		public TerminalNode WORD() { return getToken(lexAnalysisParser.WORD, 0); }
		public TerminalNode BOOLEAN() { return getToken(lexAnalysisParser.BOOLEAN, 0); }
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public TerminalNode VAR() { return getToken(lexAnalysisParser.VAR, 0); }
		public TerminalNode COMMENT() { return getToken(lexAnalysisParser.COMMENT, 0); }
		public TerminalNode TEXT_TYPE() { return getToken(lexAnalysisParser.TEXT_TYPE, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(lexAnalysisParser.SEMI_COLON, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(78);
				number();
				}
				break;
			case 2:
				{
				setState(79);
				match(LEFT_PAR);
				setState(80);
				expr(0);
				setState(81);
				match(RIGHT_PAR);
				}
				break;
			case 3:
				{
				setState(83);
				match(LEFT_PAR);
				setState(84);
				expr(17);
				}
				break;
			case 4:
				{
				setState(85);
				match(DIGIT);
				}
				break;
			case 5:
				{
				setState(86);
				match(NOT_NULL_DIGIT);
				}
				break;
			case 6:
				{
				setState(87);
				match(WS);
				}
				break;
			case 7:
				{
				setState(88);
				match(NEWLINE);
				}
				break;
			case 8:
				{
				setState(89);
				match(CHAR);
				}
				break;
			case 9:
				{
				setState(90);
				match(WORD);
				}
				break;
			case 10:
				{
				setState(91);
				match(BOOLEAN);
				}
				break;
			case 11:
				{
				setState(92);
				method();
				}
				break;
			case 12:
				{
				setState(93);
				instructions();
				}
				break;
			case 13:
				{
				setState(94);
				match(VAR);
				}
				break;
			case 14:
				{
				setState(95);
				match(COMMENT);
				}
				break;
			case 15:
				{
				setState(96);
				match(TEXT_TYPE);
				}
				break;
			case 16:
				{
				setState(97);
				assignment();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(109);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(100);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(101);
						match(WS);
						setState(102);
						expr(16);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(103);
						if (!(precpred(_ctx, 19))) throw new FailedPredicateException(this, "precpred(_ctx, 19)");
						setState(104);
						match(SEMI_COLON);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(105);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(106);
						match(RIGHT_PAR);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(107);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(108);
						match(NEWLINE);
						}
						break;
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(lexAnalysisParser.ASSIGN, 0); }
		public Id_assignContext id_assign() {
			return getRuleContext(Id_assignContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			id();
			setState(115);
			match(ASSIGN);
			setState(116);
			id_assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_exprContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(lexAnalysisParser.SEMI_COLON, 0); }
		public Assignment_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterAssignment_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitAssignment_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitAssignment_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_exprContext assignment_expr() throws RecognitionException {
		Assignment_exprContext _localctx = new Assignment_exprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			assignment();
			setState(119);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_varContext extends ParserRuleContext {
		public TerminalNode DATATYPE() { return getToken(lexAnalysisParser.DATATYPE, 0); }
		public TerminalNode SEMI_COLON() { return getToken(lexAnalysisParser.SEMI_COLON, 0); }
		public TerminalNode VAR() { return getToken(lexAnalysisParser.VAR, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Define_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterDefine_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitDefine_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitDefine_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_varContext define_var() throws RecognitionException {
		Define_varContext _localctx = new Define_varContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_define_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(DATATYPE);
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(122);
				match(VAR);
				}
				break;
			case 2:
				{
				setState(123);
				assignment();
				}
				break;
			}
			setState(126);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_methodContext extends ParserRuleContext {
		public Parameter_call_functionContext parameter_call_function() {
			return getRuleContext(Parameter_call_functionContext.class,0);
		}
		public TerminalNode DATATYPE() { return getToken(lexAnalysisParser.DATATYPE, 0); }
		public TerminalNode WORD() { return getToken(lexAnalysisParser.WORD, 0); }
		public TerminalNode CHAR() { return getToken(lexAnalysisParser.CHAR, 0); }
		public TerminalNode VAR() { return getToken(lexAnalysisParser.VAR, 0); }
		public TerminalNode REF() { return getToken(lexAnalysisParser.REF, 0); }
		public Parameter_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterParameter_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitParameter_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitParameter_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_methodContext parameter_method() throws RecognitionException {
		Parameter_methodContext _localctx = new Parameter_methodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameter_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATATYPE:
				{
				{
				setState(128);
				match(DATATYPE);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==REF) {
					{
					setState(129);
					match(REF);
					}
				}

				setState(132);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << WORD) | (1L << CHAR))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				break;
			case T__0:
			case TEXT_TYPE:
			case TINY:
			case SIGNED_TINY:
			case HUGE:
			case SIGNED_HUGE:
			case DOUBLE:
			case SIGNED_DOUBLE:
			case EXPONENTIAL:
			case SIGNED_EXPONENTIAL:
			case VAR:
				{
				setState(133);
				parameter_call_function();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_call_functionContext extends ParserRuleContext {
		public TerminalNode TEXT_TYPE() { return getToken(lexAnalysisParser.TEXT_TYPE, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode VAR() { return getToken(lexAnalysisParser.VAR, 0); }
		public Parameter_call_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_call_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).enterParameter_call_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lexAnalysisListener ) ((lexAnalysisListener)listener).exitParameter_call_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lexAnalysisVisitor ) return ((lexAnalysisVisitor<? extends T>)visitor).visitParameter_call_function(this);
			else return visitor.visitChildren(this);
		}
	}
